--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </table>
 
         <!-- Second Table for results, initially hidden -->
-        <table id="resultTable" bgcolor="lightgrey" style=" margin-top: 10px;">
+        <table id="resultTable" bgcolor="lightgrey" style="display: none; margin-top: 10px;">
             <tr>
                 <td>Gross pay :</td>
                 <td><input type="text" name="txtgpay"></td>
